if else Example Added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>JavaScript</title>
     <script src="main.js"></script>
+    <script src="ifelse.js"></script>
+    <script src="dataTypes.js"></script>
 </head>
 <body>
     
