--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>JavaScript</title>
     <script src="main.js"></script>
-    <script src="ifelse.js"></script>
+    <script src="ifStatment.js"></script>
 </head>
 <body>
     
